@@ -552,12 +552,24 @@ namespace Susy
       }
 
       // MET Composition info - do we want TLorentzVectors, TVector2, or just floats?
-      float refEle;             // Ref electron term
-      float refMuo;             // Ref muon term
+      float refEle;             // Ref electron term magnitude
+      float refEle_etx;         // Ref electron term
+      float refEle_ety;         // Ref electron term
+      float refMuo;             // Ref muon term magnitude
+      float refMuo_etx;         // Ref muon term
+      float refMuo_ety;         // Ref muon term
       float refJet;             // Ref jet term
+      float refJet_etx;         // Ref jet term
+      float refJet_ety;         // Ref jet term
       float softJet;            // Soft jet term
+      float softJet_etx;        // Soft jet term
+      float softJet_ety;        // Soft jet term
       float refGamma;           // Ref gamma term
+      float refGamma_etx;       // Ref gamma term
+      float refGamma_ety;       // Ref gamma term
       float refCell;            // Cellout term
+      float refCell_etx;        // Cellout term
+      float refCell_ety;        // Cellout term
 
       // I'm not a big fan of the way this is setup, would like to improve it someday
       int sys;                  // Met stored in vector for each sys shift, this identifies met for specific shift
@@ -568,10 +580,13 @@ namespace Susy
       // clear vars
       void clear(){
         Et = phi = 0;
-        refEle = refMuo = refJet = softJet = refGamma = refCell = sys = 0;
+        refEle = refMuo = refJet = softJet = refGamma = refCell = 0;
+        refEle_etx = refMuo_etx = refJet_etx = softJet_etx = refGamma_etx = refCell_etx = 0;
+        refEle_ety = refMuo_ety = refJet_ety = softJet_ety = refGamma_ety = refCell_ety = 0;
+        sys = 0;
       }
 
-      ClassDef(Met, 2);
+      ClassDef(Met, 3);
   };
 
   // TruthParticle
